Class.newInstance() is deprecated
Use Class.getDeclaredConstructor().newInstance() instead, with some new
exceptions to handle